# QuickTodo

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  LICENSE  Main.qml  README.md  main.cpp  vcpkg.json
src/app/: AppContainer.cpp  AppContainer.h
src/infrastructure/database/: DatabaseManager.cpp  DatabaseManager.h
src/infrastructure/logging/: Logging.cpp  Logging.h
src/model/: AppModel.cpp  AppModel.h
src/model/repository/: TaskRepository.cpp  TaskRepository.h
src/model/task/: Task.cpp  Task.h
src/view/: Main.qml
src/view/components/: GlobalErrorDialog.qml  TaskItemDelegate.qml  TaskList.qml
src/view/pages/: TaskPage.qml
src/viewmodel/: GlobalStateViewModel.cpp  GlobalStateViewModel.h  MainViewModel.cpp  MainViewModel.h  TaskActionViewModel.cpp  TaskActionViewModel.h  TaskListViewModel.cpp  TaskListViewModel.h
